# ml-llm-nikki

./: .gitignore  build_chain.py  constants.py  db_tools.py  embed_docs.py  file_helper.py  nikki.py  nikki_openai.py  nikki_templates.py  pyproject.toml  readme.md  requirements.txt  requirements_bak.txt  template_ae.py  template_nikki.py  test.py
nikki/: constants.py  db_llm_builder.py  db_rag.py  embed_docs.py  embed_lessons.py  embed_reports.py  embeddings_log.txt  markdown2stylizedpdf.py  md2pdf.py  nikki.py  nikki_ae.py  nikki_tutor.py  nikki_writer.py  report_generator.py  testsandbox.py
nikki/helpers/: embed_reports.py  file_helper.py  md2pdf.py
nikki/rag/prompts/: nikki_personality.py
nikki/rag/vectordb/chroma_ita/: chroma.sqlite3
rag/: db_rag.py  db_tools.py
rag/agents/: db_agent.py
rag/prompts/: nikki_personality.py
