[tool.poetry]
name = "nikki"
version = "0.1.0"
description = ""
authors = ["Scott Sullivan <scott@sullysbrain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
streamlit = "^1.35.0"
ollama = "^0.2.0"
chromadb = "^0.5.0"
langchain-community = "^0.2.1"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
