[tool.poetry]
name = "nikki"
version = "0.1.0"
description = ""
authors = ["Scott Sullivan <scott@sullysbrain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
streamlit = "^1.35.0"
ollama = "^0.2.0"
chromadb = "^0.5.0"
langchain-community = "^0.2.1"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
streamlit-chat = "^0.1.1"
langchain-huggingface = "^0.0.3"
markdown = "^3.6"
weasyprint = "^62.3"
jinja2 = "^3.1.4"
pango = "^0.0.1"
pydyf = "^0.11.0"
cffi = "^1.16.0"
html5lib = "^1.1"
tinycss2 = "^1.3.0"
cssselect2 = "^0.7.0"
pyphen = "^0.15.0"
pillow = "^10.4.0"
fonttools = "^4.53.1"
gobject = "^0.1.0"
markdown2 = "^2.5.0"
tantivy = "^0.22.0"
lancedb = "^0.11.0"
llama-cpp-python = "^0.2.88"
safetensors = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
